<resources>
    <string name="app_name">Preschool</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">sign in</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="wellcome">WELLCOME</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nenableDarkMode">Enable Dark Mode</string>
    <string name="darkMode">Dark mode</string>
    <string name="testMail">1@gmail.com</string>
    <string name="testPass">123456</string>
    <string name="createNewAccount">Create new account</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="setting">Setting</string>
    <string name="help">Helps</string>
    <string name="change_join_class">Change/Join class</string>
    <string name="event">Events</string>
    <string name="profile">Profile</string>
    <string name="homework">Homework</string>
    <string name="student">Student</string>
    <string name="permissonform">Permisson Form</string>
    <string name="timetable">Time Table</string>
    <string name="photo_album">Photo album</string>
    <string name="you_are_Logged_In_successfully">you are Logged In successfully.</string>
    <string name="insert_email">Please write your email</string>
    <string name="insert_pass">Please write your password</string>
    <string name="login">Login</string>
    <string name="message_login_successfully">Please wait, while we are allowing you to login into your Account</string>
    <string name="error_occured">Error occured:</string>
    <string name="parent_profile">Profile</string>
    <string name="forgo_password_dialog">Forgot Password</string>
    <string name="back">Cancel</string>
    <string name="not_a_mail">Not a mail</string>
    <string name="notify_reset_pass">To reset password, enter your mail, press the button and check mail to follow instruction.</string>
    <string name="reset_pass_successful">Check your email to complete reset password your account</string>
    <string name="logout">Log out</string>
    <string name="register">Register</string>
    <string name="menu">Menu</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add_title_album">Add a title</string>
    <string name="add_photo">ADD PHOTOS</string>
    <string name="select_photos">Select photos</string>
    <string name="upload">Upload</string>
    <string name="create_new_album">Create a new album</string>
    <string name="what_on_your_mind">What\'s on your mind ?</string>
    <string name="post">POST</string>
    <string name="my_profile">Profile</string>
    <string name="change_class">Change Class</string>
    <string name="reamneAlbum">Rename album</string>
    <string name="saveAlbum">Save on device</string>
    <string name="deleteAlbum">Delete album</string>
</resources>
