<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/photoalbum"
        android:title="@string/photo_album"
        android:icon="@drawable/ic_photoalbum"
        ></item>
    <item
        android:id="@+id/permissonform"
        android:title="@string/permissonform"
        android:icon="@drawable/ic_curriculum"></item>
    <item
        android:id="@+id/timetable"
        android:title="@string/timetable"
        android:icon="@drawable/ic_event"></item>
    <item
        android:id="@+id/student"
        android:title="@string/student"
        android:icon="@drawable/ic_gender"></item>
    <item
        android:id="@+id/menu"
        android:title="@string/menu"
        android:icon="@drawable/ic_homework"></item>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_parent"></item>
    <item
        android:id="@+id/event"
        android:title="@string/event"
        android:icon="@drawable/ic_event"></item>
    <item
        android:id="@+id/changeclass"
        android:title="@string/change_join_class"
        android:icon="@drawable/ic_changeclass"></item>
    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/ic_help"></item>
    <item android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings"></item>
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"></item>

</menu>
