<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:background="@drawable/background_fogot_pass"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:text="@string/forgotPassword"
        android:textSize="25dp"
        android:textColor="@color/background"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="14sp"
        android:paddingTop="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        android:text="@string/notify_reset_pass"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtMailForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/textcolor"
            android:background="@drawable/textview_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtNotAMail"
        android:layout_width="match_parent"
        android:textColor="@color/red"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSendFogotPass"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/send"
            android:background="@drawable/button_shape"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnBackSendPass"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/back"
            android:background="@drawable/button_shape"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"></LinearLayout>


</LinearLayout>
